[gd_scene load_steps=4 format=3 uid="uid://cdaxl15qsyucy"]

[ext_resource type="Script" uid="uid://bih5lc1ph3i3d" path="res://voice_chat_test.gd" id="1_sye21"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_kjv5x"]

[sub_resource type="AudioStreamOpusChunked" id="AudioStreamOpusChunked_sye21"]

[node name="VoiceChatTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sye21")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_kjv5x")
autoplay = true
bus = &"Microphone"

[node name="RemoteAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamOpusChunked_sye21")
volume_db = 7.298
autoplay = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 128
alignment = 1

[node name="Join" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Join"]
layout_mode = 2
text = "JOIN"

[node name="IpEdit" type="LineEdit" parent="MarginContainer/HBoxContainer/Join"]
unique_name_in_owner = true
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "IP"

[node name="JoinButton" type="Button" parent="MarginContainer/HBoxContainer/Join"]
unique_name_in_owner = true
layout_mode = 2
text = "Join"

[node name="Host" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Host"]
layout_mode = 2
text = "Host"

[node name="HostButton" type="Button" parent="MarginContainer/HBoxContainer/Host"]
unique_name_in_owner = true
layout_mode = 2
text = "Host"
